--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "3d-react-carousal": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://dmda-nft.github.io/uglyduckling",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
