--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Ugly Duckling",
-  "name": "Nevada. Florida. Texas.",
+  "name": "Nevada. Florida. Texas",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
